SERVER-45752 opCtx interruption during migration critical section commit triggers fassert in FCV 4.2